--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "dependencies": {
     "apollo-server-express": "^2.9.1",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.17.1",
-    "validator": "^11.1.0"
+    "sequelize": "^5.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
